[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "osint-agent-network"
version = "0.3.0"
description = "Multi-Agent OSINT pipeline powered by Xiaomi MiMo V2.5"
readme = "README.md"
authors = [
    {name = "OSINT Agent Network Contributors"}
]
license = {file = "LICENSE"}
requires-python = ">=3.10"
dependencies = [
    "openai>=1.0.0",
    "python-dotenv>=1.0.0",
    "pydantic>=2.0.0",
    "aiohttp>=3.8.0",
    "fastapi>=0.100.0",
    "uvicorn[standard]>=0.22.0",
    "shodan>=1.28.0",
    "stix2>=3.0.0",
    "pymisp>=2.4.0",
    "requests>=2.31.0",
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "celery>=5.3.0",
    "redis>=4.6.0",
    "matplotlib>=3.7.0",
    "networkx>=3.1.0",
    "sqlalchemy>=2.0.0",
    "aiosqlite>=0.19.0",
    "alembic>=1.11.0",
    "jinja2>=3.1.2"
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "httpx>=0.24.0",
    "black>=23.7.0",
    "flake8>=6.1.0",
    "mypy>=1.5.0"
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = "test_*.py"

[tool.black]
line-length = 100
target-version = ['py310']
include = '\.pyi?$'

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
